--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Dashboard</h1>
+        <h1>DACHI PROJECT</h1>
         <nav>
             <ul>
-                <li><a href="#">Beranda</a></li>
-                <li><a href="#">Grafik</a></li>
-                <li><a href="#">Pesan</a></li>
+                <li><a href="#overview">Beranda</a></li>
+                <li><a href="#charts">Grafik</a></li>
+                <li><a href="#message">Pesan</a></li>
                 <li><a href="#">Pengaturan</a></li>
             </ul>
         </nav>
