--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>DACHI PROJECT</h1>
+        <h1>WEB Test</h1>
         <nav>
             <ul>
-                <li><a href="#overview">Beranda</a></li>
+                <li><a href="kuliah.html">Jadwal Kuliah</a></li>
                 <li><a href="#charts">Grafik</a></li>
                 <li><a href="#message">Pesan</a></li>
                 <li><a href="#">Pengaturan</a></li>
@@ -20,8 +20,9 @@
     </header>
 
     <main>
-        <section id="overview">
-            <h2>Ringkasan</h2>
+        <section id="jadwal-kuliah">
+            <h2>INGET</h2>
+           
             <!-- Tambahkan konten ringkasan di sini -->
         </section>
 
